@@ -14,6 +14,9 @@ HDFS-6584: Archival Storage
     HDFS-6710. Change BlockPlacementPolicy to consider block storage policy
     in replica deletion.  (szetszwo)
 
+    HDFS-6679. Bump NameNodeLayoutVersion and update editsStored test files.
+    (vinayakumarb via szetszwo)
+
 Trunk (Unreleased)
 
   INCOMPATIBLE CHANGES
